--- a/app/templates/search/documents.hbs
+++ b/app/templates/search/documents.hbs
@@ -34,7 +34,7 @@
       @totalNumberOfItems={{this.model.meta.count}}
       @onChangeSize={{fn (mut this.size)}}
       @onChangePage={{fn (mut this.page)}}
-      @onClickRow={{this.navigateToDocument}}
+      @onClickRow={{this.resultClicked}}
     >
       <:body as |row|>
         <td>
