--- a/app/components/search/result-cards/news-item.hbs
+++ b/app/components/search/result-cards/news-item.hbs
@@ -10,11 +10,11 @@
     </p>
     <AuHeading @level="3" @skin="6">
       <AuLink
-        class="au-u-padding-none"
+        class="au-u-padding-none card-link"
         @route="agenda.agendaitems.agendaitem.news-item"
         @models={{array @meetingId @agendaId @agendaItemId}}
       >
-        <span>
+        <span class="card-link">
           <SanitizeHtml
             @raw={{true}}
             @value={{@title}}
