--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -47,7 +47,7 @@
       @totalNumberOfItems={{this.model.meta.count}}
       @onChangeSize={{this.selectSize}}
       @onChangePage={{fn (mut this.page)}}
-      @onClickRow={{this.navigateToCase}}
+      @onClickRow={{this.resultClicked}}
     >
       <:body as |row|>
         <td>
