--- a/app/templates/search/news-items.hbs
+++ b/app/templates/search/news-items.hbs
@@ -23,7 +23,7 @@
       @totalNumberOfItems={{this.model.meta.count}}
       @onChangeSize={{fn (mut this.size)}}
       @onChangePage={{fn (mut this.page)}}
-      @onClickRow={{this.navigateToNewsletter}}
+      @onClickRow={{this.resultClicked}}
     >
       <:body as |row|>
         <td>
