KAS-3962 Enable @overflow passthrough on confirmation modal component

--- a/app/components/confirmation-modal.hbs
+++ b/app/components/confirmation-modal.hbs
@@ -1,6 +1,7 @@
 <AuModal
   @modalOpen={{@modalOpen}}
   @closeModal={{@onCancel}}
+  @overflow={{@overflow}}
 >
   <:title>
     {{#if (has-block "title")}}
