KAS-3962 Enable overflow on confirmation modal occurrences where needed

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -218,6 +218,7 @@
 <ConfirmationModal
   @modalOpen={{this.isOpenUploadModal}}
   @title={{t "new-document-piece"}}
+  @overflow={{true}}
   @onConfirm={{perform this.addPiece}}
   @onCancel={{perform this.cancelUploadPiece}}
   @confirmMessage={{t "add"}}
