--- a/app/templates/agenda/agendaitems/agendaitem/documents.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/documents.hbs
@@ -92,6 +92,7 @@
 <ConfirmationModal
   @modalOpen={{this.isOpenPieceUploadModal}}
   @title={{t "document-add"}}
+  @overflow={{true}}
   @onConfirm={{perform this.savePieces}}
   @onCancel={{perform this.cancelUploadPieces}}
   @confirmMessage={{t "documents-add"}}
