--- a/app/templates/cases/case/subcases/subcase/documents.hbs
+++ b/app/templates/cases/case/subcases/subcase/documents.hbs
@@ -72,6 +72,7 @@
 <ConfirmationModal
   @modalOpen={{this.isOpenPieceUploadModal}}
   @title={{t "document-add"}}
+  @overflow={{true}}
   @onConfirm={{perform this.savePieces}}
   @onCancel={{perform this.cancelUploadPieces}}
   @confirmMessage={{t "documents-add"}}
