KAS-3962 Use correct @renderInPlace value for radio-dropdown-combo-select component

--- a/app/components/utils/radio-dropdown-combo-select.hbs
+++ b/app/components/utils/radio-dropdown-combo-select.hbs
@@ -41,7 +41,7 @@
     @searchEnabled={{true}}
     @searchField={{this.dropdownLabelKey}}
     @onChange={{this.select}}
-    @renderInPlace="true"
+    @renderInPlace={{true}}
   as |opt|>
     {{get opt this.dropdownLabelKey}}
   </PowerSelect>
