--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -13,7 +13,7 @@
 >
   <div data-test-agenda-overview-item-container class="vlc-agenda-items__body">
     <h4 class="vlc-agenda-items__subject">
-      {{#if @showDragHandle}}
+      {{#if @allowReorderItems}}
         <div class="vlc-agenda-items__cursor">
             <div class="vlc-agenda-items__icons">
               <AuIcon
