Link users to mandatees

--- a/app/components/publications/overview/reports/generate-report-modal.hbs
+++ b/app/components/publications/overview/reports/generate-report-modal.hbs
@@ -75,25 +75,12 @@
         </div>
       {{/if}}
       {{#if @userInputFields.mandateePersons}}
-        <div class="auk-form-group">
-          <Auk::Label>
-            {{t "ministers"}}
-          </Auk::Label>
-          <PowerSelectMultiple
-            data-test-generate-report-select-mandatee
-            @options={{this.mandateePersons}}
-            @selected={{this.selectedMandateePersons}}
+          <Mandatees::MandateePersonSelector
             @onChange={{fn (mut this.selectedMandateePersons)}}
-            @searchEnabled={{true}}
-            @search={{perform this.searchMandateePersons}}
-            @noMatchesMessage={{t "no-ministers-found"}}
-            @searchMessage={{t "no-ministers-found"}}
-            @loadingMessage={{t "search-loading-text"}}
-            as |person|
+            @dateRange={{this.dateRange}}
+            @multiple={{true}}
           >
-            {{person.fullName}}
-          </PowerSelectMultiple>
-        </div>
+          </Mandatees::MandateePersonSelector>
       {{/if}}
       {{#if @userInputFields.governmentDomains}}
         <div class="auk-form-group">
