--- a/app/templates/settings/organizations/index.hbs
+++ b/app/templates/settings/organizations/index.hbs
@@ -123,6 +123,13 @@
                   {{t "block-organization"}}
                 </AuButton>
               {{/if}}
+              <AuButton
+              @skin="naked"
+              role="menuitem"
+              {{on "click" (queue (toggle "showMandateeSelectorModal" this) (set this "organizationBeingLinked" organization))}}
+              >
+                {{t "connect to mandatee"}}
+              </AuButton>
             </AuDropdown>
           </div>
         </td>
@@ -130,6 +137,27 @@
     </KDataTable>
   </div>
 </div>
+
+<ConfirmationModal
+  @modalOpen={{this.showMandateeSelectorModal}}
+  @onConfirm={{queue (perform this.blockOrganization) (toggle "showBlockOrganizationConfirmationModal" this)}}
+  @onCancel={{toggle "showMandateeSelectorModal" this}}
+  @confirmMessage={{t "connect to mandatee"}}
+  @alert={{true}}>
+  <:title>
+    {{t "connect to mandatee"}}
+  </:title>
+  <:body>
+  <div class="au-o-flow au-o-flow--small">
+    <Mandatees::MandateeSelector
+        @referenceDate={{@referenceDate}}
+        @openSearch={{this.openSearch}}
+        @onSelectMandatee={{fn (mut this.selectedMandatee)}}
+        @selectedMandatees={{this.selectedMandatee}}
+      />
+  </div>
+  </:body>
+</ConfirmationModal>
 
 <ConfirmationModal
   @modalOpen={{this.showBlockOrganizationConfirmationModal}}
