KAS-3818 Add DDAU callback when uploading a new file

--- a/app/components/documents/document-preview/document-preview-modal.hbs
+++ b/app/components/documents/document-preview/document-preview-modal.hbs
@@ -38,6 +38,7 @@
           @markForSignature={{@markForSignature}}
           @unmarkForSignature={{@unmarkForSignature}}
           @didDeletePiece={{@didDeletePiece}}
+          @onChangeFile={{perform this.loadFile}}
         />
       </div>
     </div>
