--- a/app/components/documents/document-preview/details-tab.hbs
+++ b/app/components/documents/document-preview/details-tab.hbs
@@ -3,5 +3,6 @@
     @piece={{@piece}}
     @documentContainer={{@documentContainer}}
     @didDeletePiece={{@didDeletePiece}}
+    @onChangeFile={{@onChangeFile}}
   />
 </div>
