--- a/app/components/documents/document-preview/document-preview-sidebar.hbs
+++ b/app/components/documents/document-preview/document-preview-sidebar.hbs
@@ -76,6 +76,7 @@
             @piece={{@piece}}
             @documentContainer={{this.documentContainer}}
             @didDeletePiece={{@didDeletePiece}}
+            @onChangeFile={{@onChangeFile}}
           />
           {{! SIGNATURES }}
         {{else if (eq this.activeTab "signatures")}}
