KAS-3953 Refactor 'cards' argument on data-table component to 'list' & add necessary styling

--- a/app/components/k-data-table.hbs
+++ b/app/components/k-data-table.hbs
@@ -4,7 +4,7 @@
   {{if @striped "auk-table--striped"}}
   {{if @stickyHeader "auk-table--sticky-header"}}
   {{if @stickyActionColumn "auk-table--sticky-action-column"}}
-  {{if @cards "auk-card-table"}}"
+  {{if @list "auk-table--list"}}"
   ...attributes
 >
   <thead>
