--- a/app/templates/search/all-types.hbs
+++ b/app/templates/search/all-types.hbs
@@ -18,7 +18,7 @@
       {{/each}}
     </div>
     <KDataTable
-      @cards={{true}}
+      @list={{true}}
       @loading={{this.isLoadingModel}}
       @content={{this.model.results}}
       @numberOfItems={{this.model.results.length}}
