--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -38,7 +38,7 @@
     />
     <KDataTable
       data-test-route-search-cases-data-table
-      @cards={{true}}
+      @list={{true}}
       @loading={{this.isLoadingModel}}
       @content={{this.model}}
       @page={{this.page}}
