--- a/app/templates/search/decisions.hbs
+++ b/app/templates/search/decisions.hbs
@@ -21,7 +21,7 @@
       @sort={{this.sort}}
     />
     <KDataTable
-      @cards={{true}}
+      @list={{true}}
       @loading={{this.isLoadingModel}}
       @content={{this.model}}
       @page={{this.page}}
