--- a/app/templates/search/documents.hbs
+++ b/app/templates/search/documents.hbs
@@ -25,7 +25,7 @@
       @sort={{this.sort}}
     />
     <KDataTable
-      @cards={{true}}
+      @list={{true}}
       @loading={{this.isLoadingModel}}
       @page={{this.page}}
       @size={{this.size}}
