--- a/app/templates/search/news-items.hbs
+++ b/app/templates/search/news-items.hbs
@@ -14,7 +14,7 @@
     />
     <KDataTable
       data-test-route-search-news-items-data-table={{true}}
-      @cards={{true}}
+      @list={{true}}
       @loading={{this.isLoadingModel}}
       @content={{this.model}}
       @page={{this.page}}
