KAS-3953 Tweak white space between checkbox-lists

--- a/app/styles/auk/_auk-additions.scss
+++ b/app/styles/auk/_auk-additions.scss
@@ -387,3 +387,8 @@ table tr.lt-expanded-row {
     transform: translate3d(10px, 64px, 0px) !important;
   }
 }
+
+// Checkbox list spacing override
+.auk-checkbox-list + .auk-checkbox-list {
+  margin-top: 1rem;
+}
