add custom mandatee-person-selector component add mandatee-person-selector to user detail page add functionality to link user to mandatee add organization detail page add functionality to link organization to mandatees

--- a/app/components/mandatees/mandatee-person-selector.hbs
+++ b/app/components/mandatees/mandatee-person-selector.hbs
@@ -3,7 +3,7 @@
     {{t "ministers"}}
   </Auk::Label>
   {{#if this.mandateePersons}}
-    {{#if this.multiple}}
+    {{#if @multiple}}
     <PowerSelectMultiple
       data-test-mandatee-person-selector
       @options={{this.mandateePersons}}
