--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -23,6 +23,7 @@ $au-button-height: 3.4rem;
 @import 'ember-appuniversum/c-alert';
 @import 'ember-appuniversum/c-badge';
 @import "ember-appuniversum/c-body-container";
+@import "ember-appuniversum/c-brand";
 @import 'ember-appuniversum/c-button';
 @import 'ember-appuniversum/c-button-group';
 @import 'ember-appuniversum/c-card';
@@ -393,4 +394,11 @@ $au-button-height: 3.4rem;
     print-color-adjust: exact;
     -webkit-print-color-adjust: exact;
   }
+}
+
+.au-c-brand__logo {
+  width: 5.2rem;
+  height: 6.2rem;
+  padding-left: 0;
+  overflow: visible;
 }
